--- a/Final_Model.ipynb
+++ b/Final_Model.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\\#Image Classification with SIFT Feature and Neural Networks"
+        "\#Image Classification with SIFT/Hog/Daisy Feature and Neural Networks
       ],
       "metadata": {
         "id": "jiknP770uEyK"
@@ -42,7 +42,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Image Classification with SIFT Feature and Neural Networks"
+        "#Image Classification with SIFT/Hog/Daisy Feature and Neural Networks"
       ],
       "metadata": {
         "id": "k9EdQcncxeuJ"
